refactor: splitting item repository